# neuralBench

./: .gitignore  .project  README.md  neuralBench.cabal
data/: .gitignore
data/spambase/: spambase-short.data
data/winequality/: winequality-red-cor-short.csv
reports/: ADNNReportSpam1.html  ADNNReportSpam100.html  ADNNReportSpam400.html  ADNNReportSpam_short1.html  ADNNReportSpam_short100.html  ADNNReportSpam_short1000.html  ADNNReportWine1.html  ADNNReportWine100.html  ADNNReportWine1000.html  ADNNReportWine3000.html  ADNNReportWine_short1.html  ADNNReportWine_short100.html  ADNNReportWine_short1000.html  ADNNReportWine_short10000.html  ADNNReportXOR1.html  ADNNReportXOR100.html  ADNNReportXOR1000.html  ADNNReportXOR10000.html  ADNNReportXOR100000.html  FFOnlyNNReportSpam1.html  FFOnlyNNReportSpam_short1.html  FFOnlyNNReportWine1.html  FFOnlyNNReportWine_short1.html  FFOnlyNNReportXOR1.html  NNReportSpam1.html  NNReportSpam100.html  NNReportSpam400.html  NNReportSpam_short1.html  NNReportSpam_short100.html  NNReportSpam_short1000.html  NNReportWine1.html  NNReportWine100.html  NNReportWine1000.html  NNReportWine3000.html  NNReportWine_short1.html  NNReportWine_short100.html  NNReportWine_short1000.html  NNReportWine_short10000.html  NNReportXOR1.html  NNReportXOR100.html  (+3 more)
reports/old/: NNreportFull_Spam300_Wine8000.html  NNreportXOR_Spam_Wine_10000_300_10000.html  NNreportXOR_Spam_Wine_2_100.html  NNreportXOR_Spam_Wine_2_2.html  NNreportXOR_Spam_Wine_2_200_1000.html  NNreportXOR_Spam_alle3.html
src/: .gitignore  Main.hs  NNRun.hs
src/NNBench/: Common.hs  (+3 more)
